Closed Bug 17352 Opened 25 years ago Closed 25 years ago

[PP][BLOCKER][dogfood] Linux crashes at Startup using IMAP

Categories

(MailNews Core :: Networking, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: nbaca, Assigned: dougt)

References

Details

(Whiteboard: [PDT+])

Build 1999102709M11: Linux/Redhat 6.0 Overview: Start Mail using an IMAP account. Expand the folders, select the Inbox and it tries to display the folders and messages but then it crashes. Step to reproduce: 1. Start Mail 2. Select an IMAP profile 3. Expand the IMAP account to see all the folders Actual Results: Sometimes by selecting the Inbox it crashes right away. Other times it gets as far as showing the Password prompt but quickly crashes. Expected Results: Selecting the Inbox should automatically prompt for a password so that email messages would display, without a crash. Additional Information: - Starting Mail with a POP account works fine, no crash. - Will check Windows and Mac soon.
Severity: normal → blocker
Summary: Linux crashes at Startup using IMAP → [BLOCKER] Linux crashes at Startup using IMAP
Summary: [BLOCKER] Linux crashes at Startup using IMAP → [BLOCKER][dogfood] Linux crashes at Startup using IMAP
I see this on my linux box as well with today's build. nuke .mozilla directory, create new profile, set up IMAP mail, and it crashes when you click on the inbox folder. This is dogfood and blocker, and the tree will remain closed until it is fixed.
Build 1999102709M11: Win32/NT4 Launches Mail with an IMAP account as expected, no crash.
dougt made large changes to proxy handling last night that might be the root cause. he is looking at this and will check in in a half hour or so.
Summary: [BLOCKER][dogfood] Linux crashes at Startup using IMAP → [PP][BLOCKER][dogfood] Linux crashes at Startup using IMAP
Oh man...I started seeing this last night around 11:30 and figured I caught someone's code in mid checkin so I started a clobber build. I was actually crashing way out in some gtk code. It didn't make much sense at the time which is why I just assumed something in my tree was out of date. I'll look at it again. I'm pretty sure the problem isn't with any imap code. Jonathan mentioned that dougt is looking at this too. I'll add him to the cc list.
Here's the stack trace I saw last night that I thought was just my tree but it turns out is effecting everyone: (gdb) where #0 0x405259b2 in event_processor_callback (data=0x8658638, source=24, condition=GDK_INPUT_READ) at nsAppShell.cpp:221 #1 0x4052537f in our_gdk_io_invoke (source=0x8661100, condition=G_IO_IN, data=0x8656970) at nsAppShell.cpp:49 #2 0x406c03ca in g_io_unix_dispatch () #3 0x406c1a86 in g_main_dispatch () #4 0x406c2041 in g_main_iterate () #5 0x406c21e1 in g_main_run () #6 0x405eb7a9 in ?? () from /usr/lib/libgtk-1.2.so.0 #7 0x40525ebf in nsAppShell::Run (this=0x809f5b8) at nsAppShell.cpp:388 #8 0x40399cd1 in ?? () from /builds/mscott/mozilla/dist/bin/./libnsappshell.so #9 0x804b777 in main1 (argc=2, argv=0xbffff9c4) at nsAppRunner.cpp:604 #10 0x804b9f9 in main (argc=2, argv=0xbffff9c4) at nsAppRunner.cpp:694 #11 0x40294cb3 in ?? () from /lib/libc.so.6
Did you enter a password in the Account Setup? Is a password dialog being displayed when you click on the In-Box?
in my case, I entered a password in the account setup but didn't click remember password. Then after trying to open the Inbox (I think it was on a doubleclick) it crashed, no dialogs, no nothing.
I'm actually configured for remember password so it shouldn't be trying to bring up the password dialog when we crash.
mscott is going to check in a temporary hack to workaround this issue. we still need to figure out the root cause and solve this. If the problem isn't fixed by Friday, we're going to keep the tree closed over the weekend.
I respun linux with mscott's fix and did not see this problem. sent the builds to QA for additional testing.
Assignee: mscott → dougt
I have the real fix in hand. Sending to mscott and pav for a look.
Whiteboard: [PDT+]
Putting on PDT+ radar.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fix now checked in.
Status: RESOLVED → VERIFIED
Build 1999102808M11: Linux/Redhat 6.0 Verified Fixed. With an IMAP account I was able to start, open a folder, read a message, send a message, receive a message and exit without a crash. Great!
*** Bug 17443 has been marked as a duplicate of this bug. ***
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.