Bug #17352 --> temporarily hide this crasher by inserting an extra ref count of the event queue. this is horrible since we are introducing a leak. we need to examine the ownership model of event queues for the app shell. I'm going to get pavlov to help me look at fixing this bug for real. r=dougt a=gramps,granrose