widget/src/gtk/nsAppShell.cpp
@@ -218,7 +218,8 @@ static void event_processor_callback(gpointer data,
                                      GdkInputCondition condition)
 {
   nsIEventQueue *eventQueue = (nsIEventQueue*)data;
-  eventQueue->ProcessPendingEvents();
+  if (eventQueue)
+    eventQueue->ProcessPendingEvents();
 }
 
 #define PREF_NCOLS "browser.ncols"
@@ -483,6 +484,11 @@ NS_IMETHODIMP nsAppShell::ListenToEventQueue(nsIEventQueue *aQueue,
   // tell gdk to listen to the event queue or not
 
   gint queueToken;
+  // mscott - this is HORRIBLY wrong....I'm introducing an 
+  // intentional leak of this event queue in order to 
+  // hide the crasher for linux when opening a imap
+  // folder for bug #17352. a=by many folks for now...
+  NS_IF_ADDREF(aQueue);
 
   if (aListen) {
     queueToken = our_gdk_input_add(aQueue->GetEventQueueSelectFD(),
